--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
   padding: 0;
   box-sizing: inherit; }
 
-/*  GROUPING  */
 html,
 body {
   margin: 0px auto;
@@ -51,8 +50,8 @@ body {
     display: block;
     max-width: 100%;
     height: auto;
-    border-radius: 1.5rem;
-    margin-bottom: 1.5rem; }
+    border-radius: 1rem;
+    margin-bottom: 1.8rem; }
     .card__img-hover {
       position: absolute;
       top: 0;
@@ -71,19 +70,23 @@ body {
       position: relative; }
       .card__img-container:hover .card__img-hover {
         opacity: .5; }
-  .card h1 a {
-    font-size: 2rem;
-    font-weight: 600;
-    color: white;
-    text-decoration: none; }
-    .card h1 a:hover {
-      color: #00fff7; }
+  .card h1 {
+    margin-bottom: 1.5rem; }
+    .card h1 a {
+      font-size: 2rem;
+      font-weight: 600;
+      color: white;
+      text-decoration: none;
+      letter-spacing: 1px; }
+      .card h1 a:hover {
+        color: #00fff7; }
   .card p {
     color: #8bacda;
-    font-size: 1.8rem;
-    line-height: 1.5;
+    font-size: 1.5rem;
+    line-height: 1.6;
     font-weight: 300;
-    margin-bottom: 1.5rem; }
+    margin-bottom: 1.5rem;
+    letter-spacing: 1px; }
   .card__body::after {
     content: "";
     display: block;
@@ -98,6 +101,8 @@ body {
     .card__meta div {
       flex: 0 0 50%;
       justify-content: space-between; }
+      .card__meta div > img {
+        vertical-align: middle; }
       .card__meta div:first-child {
         color: #00fff7; }
       .card__meta div:last-child {
@@ -115,6 +120,23 @@ body {
     .card__footer a:link {
       color: white;
       text-decoration: none; }
+    .card__footer a:hover,
+    .card__footer a:focus {
+      text-decoration: underline; }
+    .card__footer a:visited {
+      color: white; }
+  @media screen and (min-width: 90em) {
+    .card {
+      width: 35rem;
+      height: 59.6rem; }
+      .card p {
+        font-size: 1.6rem;
+        margin-bottom: 2rem;
+        line-height: 1.8; }
+      .card__body::after {
+        margin: 2rem auto; }
+      .card__footer {
+        font-size: 1.8rem; } }
 
 .attribution {
   position: absolute;
@@ -125,4 +147,4 @@ body {
   text-align: center; }
 
 .attribution a {
-  color: #3e52a3; }
+  color: white; }
